# Test-task

./: .gitignore  Makefile  README.md  action_test.yml  coverage.xml  main.py  pyproject.toml  setup.cfg
.github/workflows/: action_test.yml
tests/: test_script.py
