[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.8"
wemake-python-styleguide = "^0.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "F841,W504"
per-file-ignores = "tests/**.py: S101, D103, ANN201"
spellcheck-targets = "comments"
sql-excepted-names = "EXISTS"
